--- a/README
+++ b/README
@@ -1,2 +1,11 @@
 
 ELO ELO !
+
+Serio to zajmuje 3 dni ? :)
+
+Ustawilem z poczatku zlego uzytkownika musialem jeszcze zmieniac ustawienia :)
+
+Hmm pomimo zmian w pliku nie chce mi na razie ich wykonac w Rep.
+Sprawdzmy to.
+
+Dodawanie plikow dziala.
