--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 
 ELO ELO !
 
-Serio to zajmuje 3 dni ? :)
+(: ? ind ejumjaz ot oireS         //test zmian
 
 Ustawilem z poczatku zlego uzytkownika musialem jeszcze zmieniac ustawienia :)
 
